# Clipboard

./: .deepsource.toml  .gitignore  CMakeLists.txt  CONTRIBUTING.md  LEARN.md  Makefile  README.es.md  README.md  app.getclipboard.Clipboard.desktop  app.getclipboard.Clipboard.metainfo.xml  app.getclipboard.Clipboard.yml  clang-format.ps1  clipboard.txt  copy  download.sh  dummy.txt  install-win.bat  install.bat  install.ps1  install.sh  justfile  shellcheck.sh  snapcraft.yaml  test.sh
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  FUNDING.yml  SECURITY.md  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build-clipboard.yml  clipboard-website.yml  lint-clipboard.yml  main.yml  static.yml  test-clipboard.yml  test-installer.yml  test.yml
clipboard/src/: macos.cpp
clipboardx11/src/: x11.cpp
documentation/: index.html
documentation/completions/: cb.bash  cb.fish  cb.zsh
documentation/fonts/lobster_two/: OFL.txt
documentation/manpages/: man.1  man.md
documentation/readme-assets/: CB.xcf  CBBanner.xcf  CBBannerJustText.xcf  CBHowToUse.xcf  CBQuickInstallation.xcf  CBSimpleConfiguration.xcf  cb.tape
documentation/readme-banners/: CBAllExceptWindows.xcf  CBBanner.xcf  CBBannerJustText.xcf  CBHowToUse.xcf  CBPainlessDocumentation.xcf  CBQuickInstallation.xcf  CBSimpleConfiguration.xcf  DiscordSupport.xcf  EnvironmentVariables.xcf  InstallManually.xcf  NeedHelp.xcf  ThankYou.xcf  TheCBWiki.xcf  Uninstall.xcf  Windows.xcf
documentation/website/: config.toml
documentation/website/content/: _docs.md  _index.md
documentation/website/templates/: index.html  page.html
gui/include/clipboard/: logging.hpp
installers/: install.ps1  install.sh
man/: man.1  man.md
nix/: flake.nix
readme_assets/: CBBanner.xcf  CBBannerJustText.xcf  English.xcf  español.xcf
readme_assets/en/: CBBanner.xcf  CBFastSupport.xcf  CBHowToUse.xcf  CBPainlessDocumentation.xcf
readme_assets/es/: CBFastSupport.xcf  CBHowToUse.xcf  CBPainlessDocumentation.xcf  CBQuickInstallation.xcf  CBSimpleConfiguration.xcf
src/: .clang-format  CMakeLists.txt  clang-format-check.ps1  clang-format-check.sh  clang-format.ps1  clang-format.sh  clipboard.cpp  clipboard.hpp  clipboard.sh  copy  copy.sh  cut  gui.cpp  gui.hpp  install.ps1  install.sh  langs.hpp  logging.cpp  logging.hpp  lto.cmake  macos.cpp  macos.h  macos.hpp  macos.m  macos.mm  messages.cpp  paste  paste.sh  shellcheck.sh  unix.cpp  unix.hpp  variables.cpp  wayland.cpp  wayland.hpp  windows.cpp  windows.hpp  x11.cpp  x11.hpp  x11_wayland.cpp
src/cb/: CMakeLists.txt
src/cb/src/: actions.cpp  alsaandfallback.cpp  clipboard.cpp  clipboard.hpp  externalclipboards.cpp  haiku.cpp  indicator.cpp  linux.cpp  macos.cpp  main.cpp  messages.cpp  themes.cpp  utils.cpp  windows.cpp  windows.hpp  x11wl.cpp
src/cb/src/actions/: add.cpp  clear.cpp  config.cpp  copy.cpp  edit.cpp  export.cpp  history.cpp  ignore.cpp  import.cpp  info.cpp  load.cpp  menu.cpp  note.cpp  paste.cpp  pipeinout.cpp  redo.cpp  remove.cpp  script.cpp  search.cpp  share.cpp  show.cpp  status.cpp  swap.cpp  undo.cpp
src/cb/src/locales/: de_de.cpp  en_us.cpp  es_co.cpp  es_do.cpp  fr_fr.cpp  pt_br.cpp  tr_tr.cpp
src/cb/src/sounds/: error.hpp  error.pcm  success.hpp  success.pcm
src/cb/src/utils/: cowcopy.cpp  directorysize.cpp  distance.cpp  editors.cpp  files.cpp  formatting.cpp  runners.cpp  utils.cpp
src/cbwayland/: CMakeLists.txt
src/cbwayland/src/: exception.hpp  fd.cpp  fd.hpp  wayland.cpp
src/cbwayland/src/objects/: all.hpp  buffer.cpp  buffer.hpp  callback.cpp  callback.hpp  compositor.hpp  data_device.cpp  data_device.hpp  data_device_manager.hpp  data_offer.cpp  data_offer.hpp  data_source.cpp  data_source.hpp  display.cpp  display.hpp  forward.hpp  keyboard.cpp  keyboard.hpp  registry.cpp  registry.hpp  seat.cpp  seat.hpp  shm.cpp  shm.hpp  shm_pool.cpp  shm_pool.hpp  spec.hpp  surface.cpp  surface.hpp  xdg_surface.cpp  xdg_surface.hpp  xdg_toplevel.cpp  xdg_toplevel.hpp  xdg_wm_base.cpp  xdg_wm_base.hpp
src/cbx11/: CMakeLists.txt
src/cbx11/src/: x11.cpp
src/clipboard/: CMakeLists.txt
src/clipboard/src/: actions.cpp  android.cpp  clipboard.cpp  clipboard.hpp  haiku.cpp  macos.cpp  macos.m  messages.cpp  os.hpp  posix.cpp  themes.cpp  windows.cpp  windows.hpp  x11wl.cpp
src/clipboardwayland/: CMakeLists.txt
src/clipboardwayland/src/: exception.hpp  fd.cpp  fd.hpp  wayland.cpp
src/clipboardwayland/src/objects/: all.hpp  buffer.cpp  buffer.hpp  callback.cpp  callback.hpp  compositor.hpp  data_device.cpp  data_device.hpp  data_device_manager.hpp  data_offer.cpp  data_offer.hpp  data_source.cpp  data_source.hpp  display.cpp  display.hpp  forward.hpp  keyboard.cpp  keyboard.hpp  registry.cpp  registry.hpp  seat.cpp  seat.hpp  shm.cpp  shm.hpp  shm_pool.cpp  shm_pool.hpp  spec.hpp  surface.cpp  surface.hpp  xdg_surface.cpp  xdg_surface.hpp  xdg_toplevel.cpp  xdg_toplevel.hpp  xdg_wm_base.cpp  xdg_wm_base.hpp
src/clipboardx11/: CMakeLists.txt
src/clipboardx11/src/: x11.cpp
src/gui/: CMakeLists.txt
src/gui/include/all/clipboard/: fork.hpp  gui.hpp  logging.hpp  utils.hpp
src/gui/include/clipboard/: gui.hpp
src/gui/include/posix/clipboard/posix/: mime.hpp
src/gui/include/x11wl/clipboard/x11wl/: mime.hpp
src/gui/src/: fork.cpp  gui.cpp  inferextension.cpp  infermime.cpp  mimetoextension.cpp  utils.cpp
src/gui/src/posix/: mime.cpp
src/gui/src/x11wl/: mime.cpp
src/tests/: add-file.sh  add-pipe.sh  add-text.sh  bad-action.sh  clear-file.sh  clear-pipe.sh  clear-text.sh  copy-file.sh  copy-pipe.sh  copy-text.sh  cut-file.sh  cut-pipe.sh  cut-text.sh  edit.sh  export.sh  help.sh  history.sh  ignore.sh  languages.sh  note-pipe.sh  note-text.sh  paste-file.sh  paste-pipe.sh  paste-text.sh  remove-file.sh  remove-pipe.sh  remove-text.sh  resources.sh  show-file.sh  show-pipe.sh  show-text.sh  status.sh  suite.sh  themes.sh  wayland.sh  x11.sh
tests/: copy.sh  cut.sh  files_and_redirection.sh  redirection.sh  suite.sh  test_cut.sh  test_files.sh  test_files_and_redirection.sh  test_redirection.sh
(+20 files in other folders)
